@@ -3,17 +3,18 @@ package com.pesocorporalehr.ehrrepository.config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.client.ClientHttpRequestInterceptor;
+import org.springframework.http.converter.HttpMessageConverter;
+import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.ArrayList;
 import java.util.Base64;
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class RestTemplateConfig {
-
     @Value("${ehrbase.username}")
     private String ehrBaseUsername;
 
@@ -23,19 +24,30 @@ public class RestTemplateConfig {
     @Bean
     public RestTemplate restTemplate() {
         RestTemplate restTemplate = new RestTemplate();
-        restTemplate.setInterceptors(Collections.singletonList(authInterceptor()));
+
+        // Configurar los message converters
+        List<HttpMessageConverter<?>> messageConverters = new ArrayList<>();
+
+        // Converter principal para JSON
+        MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
+        converter.setSupportedMediaTypes(List.of(MediaType.APPLICATION_JSON));
+
+        messageConverters.add(converter);
+        restTemplate.setMessageConverters(messageConverters);
+
+        // Añadir interceptor de autenticación
+        restTemplate.setInterceptors(List.of(authInterceptor()));
+
         return restTemplate;
     }
 
     private ClientHttpRequestInterceptor authInterceptor() {
         return (request, body, execution) -> {
-            // Configurar autorización básica
             String auth = ehrBaseUsername + ":" + ehrBasePassword;
             String encodedAuth = Base64.getEncoder().encodeToString(auth.getBytes());
 
-            HttpHeaders headers = request.getHeaders();
-            headers.add(HttpHeaders.AUTHORIZATION, "Basic " + encodedAuth);
-            headers.add(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON_VALUE);
+            request.getHeaders().add("Authorization", "Basic " + encodedAuth);
+            request.getHeaders().setAccept(List.of(MediaType.APPLICATION_JSON));
 
             return execution.execute(request, body);
         };
